--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.gson-2.6.2.jar=C:\\Users\\torra\\Documents\\GitHub\\Reto-1-DAM\\gson-2.6.2.jar
-file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\torra\\Documents\\GitHub\\Reto-1-DAM\\mysql-connector-java-8.0.29.jar
+file.reference.gson-2.6.2.jar-1=gson-2.6.2.jar
+file.reference.mysql-connector-java-8.0.29.jar=mysql-connector-java-8.0.29.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +44,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gson-2.6.2.jar}:\
+    ${file.reference.gson-2.6.2.jar-1}:\
     ${file.reference.mysql-connector-java-8.0.29.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
