--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.gson-2.6.2.jar-1=gson-2.6.2.jar
-file.reference.mysql-connector-java-8.0.29.jar=mysql-connector-java-8.0.29.jar
+file.reference.gson-2.6.2.jar=C:\\Users\\torra\\Documents\\GitHub\\Reto-1-DAM\\gson-2.6.2.jar
+file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\torra\\Documents\\GitHub\\Reto-1-DAM\\mysql-connector-java-8.0.29.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +44,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gson-2.6.2.jar-1}:\
+    ${file.reference.gson-2.6.2.jar}:\
     ${file.reference.mysql-connector-java-8.0.29.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -72,6 +72,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
+no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
@@ -87,6 +88,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=RandomDanceWeb.war
+war.name=RandomDance.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
